--- a/Parking Lot/First steps/task-info.yaml
+++ b/Parking Lot/First steps/task-info.yaml
@@ -50,5 +50,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/75/stages/416/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/75/stages/416/implement">JetBrains
+    Academy</a>
+  time: Tue, 03 Nov 2020 19:04:49 UTC
 record: -1
